<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="default_time" translatable="false">0:00</string>
    <string name="upper_folder" translatable="false">..</string>
    <string name="artist_time" translatable="false">%s • %s</string>
    <string name="app_name">Gramophone</string>
    <string name="home_menu_search">Search</string>
    <string name="home_menu_settings">Settings</string>
    <string name="home_menu_shuffle">Shuffle all</string>
    <string name="home_menu_refresh">Refresh</string>
    <string name="category_songs">Songs</string>
    <string name="category_albums">Albums</string>
    <string name="category_artists">Artists</string>
    <string name="category_genres">Genres</string>
    <string name="category_playlists">Playlists</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="category_dates">Dates</string>
    <plurals name="songs">
        <item quantity="one">%d Song</item>
        <item quantity="other">%d Songs</item>
    </plurals>
    <plurals name="albums">
        <item quantity="one">%d Album</item>
        <item quantity="other">%d Albums</item>
    </plurals>
    <plurals name="artists">
        <item quantity="one">%d Artist</item>
        <item quantity="other">%d Artists</item>
    </plurals>
    <plurals name="items">
        <item quantity="one">%d Item</item>
        <item quantity="other">%d Items</item>
    </plurals>
    <plurals name="folders_plural">
        <item quantity="one">%d Folder</item>
        <item quantity="other">%d Folders</item>
    </plurals>
    <string name="follow_system">Follow system</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="sort_by_size">Size</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_artist">Artist</string>
    <string name="sort_by_album">Album</string>
    <string name="sort_by_album_artist">Album artist -> title</string>
    <string name="dismiss">Dismiss</string>
    <string name="unknown_genre">Unknown genre</string>
    <string name="unknown_year">Unknown year</string>
    <string name="refreshed_songs">Refreshed %1$d songs</string>
    <string name="search">Search</string>
    <string name="search_query">Search: %s</string>
    <string name="share">Share</string>
    <string name="settings_app_name">App name</string>
    <string name="settings_contributors">Contributors</string>
    <string name="play_next">Play next</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="details">Details</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat_mode">Repeat mode</string>
    <string name="unknown_playlist">Unknown playlist</string>
    <string name="gramophone_crashed" translatable="false">Crash log</string>
    <string name="crash_gramophone_version" translatable="false">Gramophone version</string>
    <string name="crash_phone_model" translatable="false">Model</string>
    <string name="crash_phone_brand" translatable="false">Brand</string>
    <string name="crash_sdk_level" translatable="false">SDK Level</string>
    <string name="crash_time" translatable="false">Time</string>
    <string name="crash_rtype" translatable="false">Release type</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="album_artist">Album artist</string>
    <string name="unknown_version">Unknown version</string>
    <string name="settings_version">Version</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_artist">Artist</string>
    <string name="settings_category_behavior">Behavior</string>
    <string name="settings_mediastore_filter">Song minimum length (seconds)</string>
    <string name="settings_repository">Repository</string>
    <string name="dialog_album">Album</string>
    <string name="dialog_genre">Genre</string>
    <string name="dialog_album_artist">Album artist</string>
    <string name="dialog_track_number">Track number</string>
    <string name="dialog_year">Year</string>
    <string name="dialog_path">Path</string>
    <string name="unknown_album">Unknown album</string>
    <string name="recently_added">Recently added</string>
    <string name="folders">Folders</string>
    <string name="settings_app_theme">App theme</string>
    <string name="reverse_order">Reverse order</string>
    <string name="natural_order">Natural order</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="layout">Display</string>
    <string name="home_menu_equalizer">Equalizer</string>
    <string name="equalizer_not_found">Equalizer not found!</string>
    <string name="compact_list">List (compact)</string>
    <string name="check_for_updates">Check our channel for updates!</string>
    <string name="settings_default_progress_bar">Default progress bar</string>
    <string name="settings_default_progress_bar_summary">Enable material styled progress bar</string>
    <string name="opensource_info">Open-sourced under GPL-3.0\nCopyright %s</string>
    <string name="playlist_favourite">Favourites</string>
    <string name="settings_contributors_click">%s (click for more!)</string>
    <string name="now_playing">Now playing</string>
    <string name="settings_content_based_color_summary">Enable album based color generation</string>
    <string name="settings_content_based_color">Content based colors</string>
    <string name="settings_package_type">Package type</string>
    <string name="no_lyric_found">No lyric found</string>
    <string name="dialog_disc_number">Disc number</string>
    <string name="unknown_title">Unknown title</string>
    <string name="filesystem">Filesystem</string>
    <string name="dialog_mime">MIME type</string>
    <string name="dialog_duration">Duration</string>
    <string name="settings_title_center">Centered title</string>
    <string name="settings_title_center_summary">Use centered title for full player</string>
    <string name="settings_player_ui">Player UI</string>
    <string name="settings_player_ui_summary">Full player UI, lyrics</string>
    <string name="settings_appearance_summary">Application appearance, theme modes</string>
    <string name="settings_about_app">About</string>
    <string name="settings_about_gramophone">About application</string>
    <string name="settings_behavior_summary">Filters, launch behaviors</string>
    <string name="settings_category_links">Links</string>
    <string name="settings_library">Library</string>
    <string name="settings_library_summary">Manage media library</string>
    <string name="settings_player_options">Audio</string>
    <string name="settings_player_options_summary">Output quality, playback behavior</string>
    <string name="settings_customization">Customization</string>
    <string name="settings_customization_summary">Manage customization options</string>
    <string name="settings_album_round_corner">Album round corner</string>
    <string name="settings_title_bold">Bold title</string>
    <string name="settings_title_bold_summary">Use bold title for full player</string>
    <string name="settings_experimental_settings">Experimental</string>
    <string name="settings_experimental_settings_summary">Testing features, misc</string>
    <string name="settings_color_accuracy_summary">Make color generation accurate</string>
    <string name="settings_color_accuracy">Color accuracy</string>
    <string name="sort_by_add_date">Add date</string>
    <string name="sort_by_modified_date">Modified date</string>
    <string name="settings_lyric">Lyric</string>
    <string name="settings_lyrics_configuration">Lyrics configuration</string>
    <string name="settings_lyrics_configuration_summary">Configure lyrics appearance</string>
    <string name="settings_lyrics_bold">Bold lyrics</string>
    <string name="settings_lyrics_bold_summary">Use a heavier font weight for lyrics</string>
    <string name="settings_lyrics_center">Center alignment</string>
    <string name="settings_lyrics_center_summary">Use center alignment for lyrics</string>
    <string name="settings_play_on_launch">Play on launch</string>
    <string name="settings_play_on_launch_summary">Play music on launch</string>
    <string name="settings_blacklist">Blacklist</string>
    <string name="settings_blacklist_folder_summary">Filter songs from certain folders</string>
    <string name="settings_blacklist_folder">Blacklist folders</string>
    <string name="settings_category_basic_info">Basic info</string>
    <string name="settings_category_misc">Misc</string>
    <string name="settings_category_filters">Filters</string>
    <string name="settings_preference_category_application">Application</string>
    <string name="settings_category_full_player">Full player</string>
    <string name="settings_crash_application">Crash application</string>
    <string name="settings_crash_application_summary">Crash-O-Matic 3000</string>
    <string name="album_cover">Album cover</string>
    <string name="dialog_edit_metadata">Edit</string>
    <string name="dialog_lyrics">Lyrics</string>
    <string name="delete_failed">Deleting song failed: %s</string>
    <string name="delete_failed_playlist">Deleting playlist failed: %s</string>
    <string name="album_covers_enhance">Enhanced album cover loading</string>
    <string name="album_covers_enhance_desc">Display high quality song covers and allow album and song cover to differ (requires photos access)</string>
    <string name="deny_images"><![CDATA[Please deny \"Photos and videos\" permission]]></string>
    <string name="grant_images"><![CDATA[Please grant \"Photos and videos\" permission]]></string>
    <string name="grant_audio"><![CDATA[Please grant \"Music and audio\" permission]]></string>
    <string name="crash_clipboard">Copied crash log to clipboard</string>
    <string name="crash_thread" translatable="false">Thread</string>
    <string name="settings_trim_lyrics">Remove spaces around lyrics</string>
    <string name="timer">Sleep timer</string>
    <string name="playback_speed">Playback speed</string>
    <string name="tempo">Tempo</string>
    <string name="pitch">Pitch</string>
    <string name="tempo_pitch_value">%s: %.2fx</string>
    <string name="lock_tempo_pitch">Lock tempo and pitch</string>
    <string name="reset">Reset</string>
    <string name="current_playlist">Current playlist</string>
    <string name="fgs_failed_title">Failed to resume music playback</string>
    <string name="fgs_failed_text">Click here to open the app and continue playback</string>
    <string name="fgs_failed_channel">Playback failed to resume</string>
    <string name="sort_by_release_date">Release date</string>
    <string name="timer_expiry">Sleep timer will pause music at %s</string>
    <string name="timer_expiry_eos">Sleep timer will pause music when song playing at %s ends</string>
    <string name="timer_expiry_end_of_this_song">Sleep timer will pause music at the end of this song</string>
    <string name="settings_preference_category_home">Home screen</string>
    <string name="tab_order">Configure tab order</string>
    <string name="tab_order_summary">The app will show the first tab on startup. Tabs after the divider will be hidden.</string>
    <string name="seekbar">Seekbar</string>
    <string name="divider">Divider</string>
    <string name="back">Back</string>
    <string name="play_all">Play all</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="sort">Sort</string>
    <string name="scroll_to_albums">Scroll to albums</string>
    <string name="scroll_to_songs">Scroll to songs</string>
    <string name="play">Play</string>
    <string name="more">More</string>
    <string name="remove">Remove</string>
    <string name="skip_next">Skip to next</string>
</resources>