<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/settings_category_info">
        <Preference
            android:title="@string/settings_app_name"
            android:summary="@string/app_name"
            android:icon="@drawable/widgets_art" />
        <Preference
            android:key="app_version"
            android:title="@string/settings_version"
            android:summary="@string/unknown_version"
            android:icon="@drawable/ic_conversion_path"/>
        <Preference
            android:title="@string/settings_contributors"
            android:summary="@string/settings_contributors_detail"
            android:icon="@drawable/artist_art"/>
        <Preference
            android:title="@string/settings_repository"
            android:icon="@drawable/ic_language"
            android:summary="https://github.com/AkaneTan/Gramophone">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/AkaneTan/Gramophone" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_category_appearance">
        <DropDownPreference
            android:key="theme_mode"
            android:icon="@drawable/daynight_art"
            android:title="@string/settings_app_theme"
            android:entries="@array/theme_switch"
            android:entryValues="@array/theme_switch_val"
            android:defaultValue="0"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_category_behavior">
        <SeekBarPreference
            android:key="mediastore_filter"
            android:title="@string/settings_mediastore_filter"
            android:summary="@string/settings_mediastore_filter_summary"
            android:max="120"
            android:defaultValue="@integer/filter_default_sec"
            android:icon="@drawable/filter_art"
            app:showSeekBarValue="true" />
    </PreferenceCategory>
</PreferenceScreen>