<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2023  Akane Foundation
  ~
  ~     Gramophone is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Gramophone is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:icon="@drawable/ic_text_fields"
        android:key="bold_title"
        android:layout="@layout/icon_switch_preference"
        android:summary="@string/settings_title_bold_summary"
        android:title="@string/settings_title_bold"
        android:widgetLayout="@layout/preference_material_switch" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:icon="@drawable/ic_format_align_center"
        android:key="centered_title"
        android:layout="@layout/icon_switch_preference"
        android:summary="@string/settings_title_center_summary"
        android:title="@string/settings_title_center"
        android:widgetLayout="@layout/preference_material_switch" />
    <SeekBarPreference
        android:defaultValue="@integer/round_corner_radius"
        android:icon="@drawable/ic_rounded_corner"
        android:key="album_round_corner"
        android:layout="@layout/icon_seekbar_preference"
        android:max="28"
        android:summary="@string/settings_album_round_corner_summary"
        android:title="@string/settings_album_round_corner"
        app:showSeekBarValue="true" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:icon="@drawable/ic_colors"
        android:key="content_based_color"
        android:layout="@layout/icon_switch_preference"
        android:summary="@string/settings_content_based_color_summary"
        android:title="@string/settings_content_based_color"
        android:widgetLayout="@layout/preference_material_switch" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:icon="@drawable/ic_draw_abstract"
        android:key="default_progress_bar"
        android:layout="@layout/icon_switch_preference"
        android:summary="@string/settings_default_progress_bar_summary"
        android:title="@string/settings_default_progress_bar"
        android:widgetLayout="@layout/preference_material_switch" />
    <Preference
        android:icon="@drawable/ic_lyrics"
        android:key="lyrics"
        android:layout="@layout/basic_preference"
        android:summary="@string/settings_lyrics_configuration_summary"
        android:title="@string/settings_lyrics_configuration" />
    <!-- For extra space below -->
    <Preference
        android:enabled="false"
        android:title="" />
    <Preference
        android:enabled="false"
        android:title="" />
</PreferenceScreen>