<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2023  Akane Foundation
  ~
  ~     Gramophone is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Gramophone is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:icon="@drawable/widgets_art"
        android:key="app_name"
        android:summary="@string/app_name"
        android:title="@string/settings_app_name"
        android:layout="@layout/basic_preference"/>
    <Preference
        android:icon="@drawable/ic_conversion_path"
        android:key="app_version"
        android:summary="@string/unknown_version"
        android:title="@string/settings_version"
        android:layout="@layout/basic_preference"/>
    <Preference
        android:icon="@drawable/ic_cookie"
        android:key="package_type"
        android:summary="@string/unknown_version"
        android:title="@string/settings_package_type"
        android:layout="@layout/basic_preference"/>
    <Preference
        android:icon="@drawable/artist_art"
        android:summary="@string/settings_contributors_detail"
        android:title="@string/settings_contributors"
        android:layout="@layout/basic_preference"/>
    <PreferenceCategory
        android:title="@string/settings_category_links"
        app:iconSpaceReserved="false">
        <Preference
            android:icon="@drawable/ic_language"
            android:summary="https://github.com/AkaneTan/Gramophone"
            android:title="@string/settings_repository"
            android:layout="@layout/basic_preference">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/AkaneTan/Gramophone" />
        </Preference>
        <Preference
            android:icon="@drawable/ic_telegram"
            android:summary="@string/check_for_updates"
            android:title="Telegram"
            android:layout="@layout/basic_preference">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/AkaneDevRel" />
        </Preference>
    </PreferenceCategory>
    <!-- For extra space below -->
    <Preference
        android:enabled="false"
        android:title="" />
    <Preference
        android:enabled="false"
        android:title="" />
</PreferenceScreen>