<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/home_menu_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/home_menu_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/equalizer"
        android:icon="@drawable/ic_equalizer"
        android:title="@string/home_menu_equalizer"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/home_menu_settings"
        app:showAsAction="never" />
</menu>