<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2024 Akane Foundation
  ~
  ~     Gramophone is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Gramophone is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_category_filters">

        <SeekBarPreference
            android:defaultValue="@integer/filter_default_sec"
            android:icon="@drawable/filter_art"
            android:key="mediastore_filter"
            android:layout="@layout/preference_seekbar"
            android:max="120"
            android:title="@string/settings_mediastore_filter"
            app:showSeekBarValue="true" />

        <Preference
            android:icon="@drawable/ic_filter_none"
            android:key="blacklist"
            android:layout="@layout/basic_preference_iconless"
            android:summary="@string/settings_blacklist_folder_summary"
            android:title="@string/settings_blacklist_folder" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_category_misc">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_autorenew"
            android:key="autoplay"
            android:layout="@layout/switch_preference"
            android:summary="@string/settings_play_on_launch_summary"
            android:title="@string/settings_play_on_launch" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="album_covers"
            android:layout="@layout/switch_preference"
            android:summary="@string/album_covers_compat_desc"
            android:title="@string/album_covers_compat" />

    </PreferenceCategory>

</PreferenceScreen>