<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2024 Akane Foundation
  ~
  ~     Gramophone is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Gramophone is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_category_misc">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="color_accuracy"
            android:layout="@layout/preference_switch"
            android:summary="@string/settings_color_accuracy_summary"
            android:title="@string/settings_color_accuracy"
            android:widgetLayout="@layout/preference_switch_widget"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="crash"
            android:layout="@layout/preference_basic"
            android:summary="@string/settings_crash_application_summary"
            android:title="@string/settings_crash_application"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>