<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/album_artist"
            android:title="@string/album_artist"
            android:checkable="true"
            android:orderInCategory="1"
            app:showAsAction="never"/>
        <item
            android:id="@+id/name"
            android:checked="true"
            android:orderInCategory="2"
            android:title="@string/sort_by_name"
            app:showAsAction="never" />
        <item
            android:id="@+id/size"
            android:checked="false"
            android:orderInCategory="3"
            android:title="@string/sort_by_size"
            app:showAsAction="never" />
    </group>
</menu>